--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <section class="register">
     <h2>💰 Joining Fee: ₹500 only</h2>
     <p>📅 Limited Seats Available – Register Now!</p>
-    <button onclick="window.location.href='https://forms.gle/your-google-form-link'">Register Now</button>
+    <button onclick="window.location.href='https://forms.gle/PVvdrbEtuMEG5Xwq5'">Register Now</button>
 
      
   
@@ -176,4 +176,5 @@
     <p>Made with ❤️ for future coders.</p>
   </footer>
 </body>
+
 </html>  
