--- a/index.html
+++ b/index.html
@@ -166,6 +166,8 @@
     <h2>💰 Joining Fee: ₹500 only</h2>
     <p>📅 Limited Seats Available – Register Now!</p>
     <button onclick="window.location.href='https://forms.gle/PVvdrbEtuMEG5Xwq5'">Register Now</button>
+                                  <button onclick="window.location.href='https://drive.google.com/file/d/1W7XsmzGOwv06_vHcOi3gTGpuhMlpIgyh/view?usp=drive_link'">Download Brochure</button>"
+
 
      
   
@@ -178,3 +180,4 @@
 </body>
 
 </html>  
+
